--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,15 +1,17 @@
-.item-card {
+.card {
   border: 1px solid #0000004d;
   border-radius: 19px;
   overflow: hidden;
   position: relative;
+  width: 323px;
   display: flex;
   justify-content: center;
 }
 
-.item-card__name {
-  margin: 15px 0 0;
+.card__title {
+  margin: 0;
   position: absolute;
+  top: 15px;
   background-color: #fff;
   padding: 2px 12px;
   border-radius: 4px;
@@ -20,7 +22,7 @@
   line-height: 1.25;
 }
 
-.item-card__image {
+.card__image {
   object-fit: cover;
   height: 100%;
   width: 100%;
