feat: Add responsive design with mobile menu overlay and media queries

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,3 +8,9 @@
   margin: 0 auto;
   padding: 0 40px;
 }
+
+@media screen and (max-width: 627px) {
+  .page__content {
+    padding: 0 16px;
+  }
+}
