--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -5,7 +5,7 @@
 .modal__container_type_preview {
   padding: 0;
   overflow: hidden;
-  /* max-height: 610px; */
+  border: none;
 }
 
 .modal__close-btn_type_preview {
@@ -36,4 +36,20 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
+}
+
+@media screen and (max-width: 627px) {
+  .modal_type_preview {
+    border-radius: 12px;
+  }
+
+  .modal__close-btn_type_preview {
+    top: 12px;
+    right: 12.79px;
+    padding: 0;
+  }
+
+  .modal__footer {
+    padding: 20px 20px 40px;
+  }
 }
