--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,3 +14,14 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 627px) {
+  .cards__name {
+    margin: 32px 0 20px;
+  }
+
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 164px);
+    gap: 15px;
+  }
+}
