--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,9 +5,9 @@
 }
 
 .page__content {
-  max-width: 1360px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 32px 40px 24px;
 }
 
 @media screen and (max-width: 627px) {
