--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 32px 0 28px;
+  padding: 0 0 28px;
   position: relative;
   justify-content: space-between;
 }
