--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -113,12 +113,12 @@
 }
 
 .modal__submit {
-  margin: 32px 0 0;
+  margin-top: 24px;
   padding: 8px 16px;
   border: none;
   background-color: #000;
   border-radius: 4px;
-  max-width: 124px;
+  width: 124px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
