--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -9,6 +9,7 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, 325px);
+  grid-template-rows: repeat(auto-fit, 325px);
   gap: 20px;
   justify-content: center;
   padding: 0;
