feat: Load clothing items from API and remove hardcoded array of clothing items

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -28,11 +28,6 @@
   display: flex;
 }
 
-.header__mobile-menu a {
-  text-decoration: none;
-  color: #000;
-}
-
 .header__close-btn {
   display: none;
 }
@@ -45,6 +40,11 @@
   padding: 0;
   border: none;
   background-color: transparent;
+}
+
+.header__nav-link {
+  text-decoration: none;
+  color: #000;
 }
 
 .header__user-container {
