--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,3 +4,11 @@
   padding: 19px 0 0;
   gap: 116px;
 }
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    padding: 4px 0 0;
+    gap: 20px;
+  }
+}
