--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -5,6 +5,11 @@
   align-items: center;
 }
 
+.sidebar__user-info {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar__username {
   margin: 0;
   font-weight: 700;
@@ -13,7 +18,53 @@
   white-space: nowrap;
 }
 
+.sidebar__change-data-btn {
+  border: none;
+  background: transparent;
+  padding: 0;
+  width: fit-content;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+  color: #00000099;
+  display: none;
+}
+
+.sidebar__logout-btn {
+  border: none;
+  background: transparent;
+  padding: 0;
+  width: fit-content;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+  color: #00000099;
+  display: none;
+}
+
 .sidebar__avatar {
   height: 56px;
   width: 56px;
+}
+
+@media screen and (max-width: 627px) {
+  .sidebar {
+    padding: 20px 0;
+    border-bottom: 1px solid #0000004d;
+    border-top: 1px solid #0000004d;
+  }
+
+  .sidebar__user-container {
+    justify-content: flex-end;
+    align-items: flex-start;
+  }
+
+  .sidebar__change-data-btn {
+    margin: 12px 0 8px;
+    display: block;
+  }
+
+  .sidebar__logout-btn {
+    display: block;
+  }
 }
