--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,8 +32,28 @@
   display: none;
 }
 
+.header__register-btn {
+  margin: 0 20px 0 0;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.header__login-btn {
+  margin: 0;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
 .header__add-clothes-btn {
-  margin: 0 8px 0 0;
+  margin: 0 20px 0 0;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
