--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -81,6 +81,17 @@
   white-space: nowrap;
 }
 
+.header__avatar {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #00000080;
+  border-radius: 50%;
+}
+
+.header__avatar-placeholder {
+  background: #00000033;
+}
+
 .header__mobile-menu-btn {
   position: absolute;
   top: 18px;
