--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -3,6 +3,7 @@
   flex-direction: row-reverse;
   gap: 16px;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .sidebar__user-info {
@@ -18,33 +19,41 @@
   white-space: nowrap;
 }
 
+sidebar__btn-container {
+  display: flex;
+}
+
 .sidebar__change-data-btn {
   border: none;
   background: transparent;
   padding: 0;
-  width: fit-content;
-  font-weight: 500;
+  margin: 24px 0 8px 0;
+  /* width: fit-content; */
+  font-weight: 700;
   font-size: 20px;
   line-height: 1;
-  color: #00000099;
-  display: none;
+  color: #000;
+  display: block;
+  white-space: nowrap;
 }
 
 .sidebar__logout-btn {
   border: none;
   background: transparent;
   padding: 0;
-  width: fit-content;
-  font-weight: 500;
+  /* width: fit-content; */
+  font-weight: 700;
   font-size: 20px;
   line-height: 1;
-  color: #00000099;
-  display: none;
+  color: #000;
+  display: block;
 }
 
 .sidebar__avatar {
   height: 56px;
   width: 56px;
+  border-radius: 50%;
+  border: 1px solid #00000080;
 }
 
 @media screen and (max-width: 627px) {
@@ -61,10 +70,16 @@
 
   .sidebar__change-data-btn {
     margin: 12px 0 8px;
-    display: block;
+    color: #00000099;
+    font-weight: 500;
+    width: fit-content;
+    /* display: block; */
   }
 
   .sidebar__logout-btn {
-    display: block;
+    /* display: block; */
+    width: fit-content;
+    font-weight: 500;
+    color: #00000099;
   }
 }
